--- a/express_typeorm_mysql/package.json
+++ b/express_typeorm_mysql/package.json
@@ -12,9 +12,15 @@
       "typescript": "^4.1.2"
    },
    "dependencies": {
+      "@types/bcryptjs": "^2.4.2",
+      "@types/body-parser": "^1.19.0",
+      "@types/jsonwebtoken": "^8.5.0",
+      "bcryptjs": "^2.4.3",
+      "body-parser": "^1.19.0",
       "cors": "^2.8.5",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
+      "jsonwebtoken": "^8.5.1",
       "morgan": "^1.10.0",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.13",
