--- a/express_typeorm_mysql/tsconfig.json
+++ b/express_typeorm_mysql/tsconfig.json
@@ -11,6 +11,9 @@
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "sourceMap": true,
-      "esModuleInterop": true
-   }
+      "declaration": true,
+      "esModuleInterop": true,
+   },
+   "include": ["src/**/*"],
+   "files": ["types.d.ts"]
 }
